Add route to change the treadmill speed: POST /treadmill/change-speed-by
* The input json has one attribute: `speed_delta_kph`, which must not be out of the range of -1.0 km/h to 1.0 km/h inclusive.
* The response json has one attribute: `new_speed_kph`, the new speed of the treadmill.
