# walkingpadfitbit/domain/treadmillcontroller.py
@@ -1,5 +1,7 @@
 from abc import ABC, abstractmethod
-from typing import Callable
+from typing import Annotated, Callable
+
+from annotated_types import Ge, Le
 
 from walkingpadfitbit.domain.entities.event import TreadmillEvent
 
@@ -28,3 +30,15 @@ class TreadmillController(ABC):
 
     @abstractmethod
     async def stop(self) -> None: ...
+
+    @abstractmethod
+    async def change_speed_by(
+        self,
+        speed_delta_kph: Annotated[float, Le(1.0), Ge(-1.0)],
+    ) -> float:
+        """
+        Increase or decrease the current treadmill speed by the given delta.
+        :param speed_delta_kph: the difference (negative or positive) speed in km/h to apply to the current speed.
+
+        :return: the new treadmill speed.
+        """
